# Tarea-3_ASIES

./: Prueba Tesis.html  README.md  genindex.html  intro.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: Prueba Tesis.ipynb  intro.md
tarea3/: Prueba Tesis.ipynb  _toc.yml  elcomercio12abril_2mayo.txt  elcomercio17mayo_31mayo.txt  elcomercio1junio_7junio.txt  elcomercio3mayo_16mayo.txt  elcomercio8junio_20julio.txt  graph0.html  graph1.html  graph2.html  graph3.html  graph4.html  graph5.html  graph6.html  graph7.html  graph8.html  graph9.html  larepublica12abril_2mayo.txt  larepublica17mayo_31mayo.txt  larepublica1junio_7junio.txt  larepublica3mayo_16mayo.txt  larepublica8junio_20julio.txt
tarea3/_build/.doctrees/: Prueba Tesis.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
tarea3/_build/html/: .buildinfo  search.html  searchindex.js
tarea3/_build/html/_sources/: intro.md
tarea3/_build/jupyter_execute/: Prueba Tesis.ipynb  markdown-notebooks.ipynb  notebooks.ipynb
