[tool.poetry]
name = "tarea-3-asies"
version = "0.1.0"
description = ""
authors = ["Aldo Yérico Mendoza Cotera <96565198+avarice2001@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
numpy = "^1.26.4"
networkx = "^3.3"
matplotlib = "^3.8.4"
pyvis = "^0.3.2"
jupyter-book = "^1.0.0"
ipykernel = "^6.29.4"
ghp-import = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
